# databend-py

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  release.yaml
databend_driver/: __init__.py  client.py  connection.py  log.py  result.py
databend_driver/util/: helper.py
databend_py/: __init__.py  client.py  connection.py  context.py  datetypes.py  defines.py  errors.py  log.py  result.py  retry.py  sdk_info.py  uploader.py
databend_py/util/: escape.py  helper.py
docs/: connection.md
examples/: batch_insert.py  iter_query.py  ordinary_query.py  replace_into.py  session_setting.py  upload_to_stage.py
tests/: test_client.py  test_simple.py  testcase.py  ttt.py
